--- a/ArtistSearch/ArtistSearch/App.config
+++ b/ArtistSearch/ArtistSearch/App.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-    </startup>
+  <appSettings>
+    <add key="AWSProfileName" value="RosettaHub"/>
+    <add key="AWSRegion" value="eu-west-1" />
+  </appSettings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+  </startup>
 </configuration>
