--- a/ArtistSearch/ArtistSearch/packages.config
+++ b/ArtistSearch/ArtistSearch/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AWSSDK.Core" version="3.3.22" targetFramework="net461" />
+  <package id="AWSSDK.Core" version="3.3.22.1" targetFramework="net461" />
   <package id="AWSSDK.DynamoDBv2" version="3.3.7.2" targetFramework="net461" />
+  <package id="AWSSDK.S3" version="3.3.18.2" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
 </packages>
